# SnapHeater-U1

./: .gitignore  ACKNOWLEDGEMENTS.md  AUTHORS.md  BRANDING_AND_ATTRIBUTION.md  BUILD_AND_TEST_PLAN.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  FEATURE_MATRIX.md  LICENSE  LICENSE_POLICY.md  NOTICE.md  PROJECT_HIGHLIGHTS.md  PROJECT_ORIGIN.md  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  partitions.csv  sdkconfig.defaults
.github/: FUNDING.yml
docs/: BACK_TO_ORIGINAL_FW.md  BINARY_FINDINGS_NOTES.md  BIN_ANALYSIS_LIMITS.md  FLASH_BACKUP_RESTORE.md  HARDWARE_BRINGUP_CHECKLIST.md  HARDWARE_LIABILITY_DISCLAIMER.md  README.md  SAFETY_UNLOCK_PROCEDURE.md  SYSTEM_DIAGRAMS.md  advanced_chamber_features_v1_0.md  api.md  ble_android.md  changelog_v1_8_0.md  changelog_v1_9_0.md  changelog_v1_9_1.md  changelog_v1_9_2.md  event_log.md  extended_intelligence_v1_3.md  gpio_verification.md  material_profile_mismatch_warning.md  material_profiles.md  moonraker.md  original_flash_layout.md  panda_breath_fan_triac.md  persistent_settings_ble_wifi.md  physical_controls_leds.md  preheat_hold_android.md  productization_safety_v1_4.md  (+5 more)
main/: CMakeLists.txt  Kconfig.projbuild  api_server.c  api_server.h  app_config.h  app_main.c  app_state.c  app_state.h  ble_control.c  ble_control.h  board_panda_breath.h  event_log.c  event_log.h  fan_triac.c  fan_triac.h  heater.c  heater.h  moonraker_client.c  moonraker_client.h  ntc.c  ntc.h  physical_controls.c  physical_controls.h  profiles.c  profiles.h  safety.c  safety.h  settings_store.c  settings_store.h  wifi_sta.c  wifi_sta.h
(+42 files in other folders)
